<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="kyc_non_specific_server_error">Error, please try again</string>
    <string name="kyc_splash_title">Swap</string>
    <string name="kyc_splash_apply_now">Begin now</string>
    <string name="kyc_splash_message">Announcing Swap by Blockchain - the faster, smarter way to trade your crypto.</string>
    <string name="kyc_splash_terms_and_conditions">By tapping Begin Now, you agree to Blockchain’s</string>
    <string name="kyc_splash_terms_and_conditions_submit">By tapping Submit, you agree to Blockchain’s</string>
    <string name="kyc_splash_terms_and_conditions_terms">Terms of Service</string>
    <string name="kyc_splash_terms_and_conditions_privacy">Privacy Policy</string>
    <string name="kyc_country_selection_title">Country of Residence</string>
    <string name="kyc_country_selection_state_title">State</string>
    <string name="kyc_country_selection_header">Why do you need this?</string>
    <string name="kyc_country_selection_message">Every country has different rules on trading cryptocurrencies.</string>
    <string name="kyc_country_selection_message_state">Every state has different rules on trading cryptocurrencies.</string>
    <string name="kyc_country_selection_search_hint">Search for your country</string>
    <string name="kyc_country_selection_connection_error">Please check your connection</string>
    <string name="kyc_country_selection_please_wait">Please wait…</string>
    <string name="kyc_profile_title">Profile</string>
    <string name="kyc_profile_header">Why do we need this information?</string>
    <string name="kyc_profile_message">We need this to verify your identity in order for you to use this improved feature. It should only take a couple of minutes.</string>
    <string name="kyc_profile_first_name_hint">First Name</string>
    <string name="kyc_profile_last_name_hint">Last Name</string>
    <string name="kyc_profile_dob_hint">Date of Birth</string>
    <string name="kyc_profile_next">Next</string>
    <string name="kyc_profile_submit">Submit</string>
    <string name="kyc_profile_error">Error creating user details, try again later</string>
    <string name="kyc_profile_error_conflict">A user already exists with this email address</string>
    <string name="kyc_invalid_country_message_me">Message me when available</string>
    <string name="kyc_invalid_country_no_thanks">No thanks</string>
    <string name="kyc_invalid_country_header">Coming soon to %1$s</string>
    <string name="kyc_invalid_country_message">Every country has different rules on how to buy and sell cryptocurrencies. Keep your eyes peeled, and we\'ll let you know as soon as we launch in %1$s!</string>
    <string name="kyc_address_title">Home Address</string>
    <string name="kyc_address_header">What is my address used for?</string>
    <string name="kyc_address_message">This information is only used to help us verify your identity.</string>
    <string name="kyc_address_search_hint">Search for your %1$s</string>
    <string name="kyc_address_search_hint_postcode">postcode</string>
    <string name="kyc_address_search_hint_zipcode">zip code</string>
    <string name="kyc_address_address_first_line_hint">Address</string>
    <string name="kyc_address_address_apt_name_hint">Apt, Floor, #</string>
    <string name="kyc_address_address_postcode_hint">Postcode</string>
    <string name="kyc_address_address_zip_code_hint">Zip Code</string>
    <string name="kyc_address_address_city_hint">City</string>
    <string name="kyc_address_address_state_hint">State</string>
    <string name="kyc_address_address_county_hint">County</string>
    <string name="kyc_address_address_country_hint">Country</string>
    <string name="kyc_address_google_not_available">Google Play Services are not available on this device.</string>
    <string name="kyc_address_error_saving">Error saving address, please try again</string>
    <string name="kyc_address_error_loading_places">Error connecting to address search</string>
    <string name="kyc_email_title">Verify Your Email</string>
    <string name="kyc_email_message">We need to verify your email address as an added layer of security.</string>
    <string name="kyc_email_hint_focused">Your Email</string>
    <string name="kyc_email_hint_unfocused">@string/kyc_email_hint_focused</string>
    <string name="kyc_email_error_saving_email">Error saving email, please try again</string>
    <string name="kyc_email_error_conflict">Email already registered, please use another.</string>
    <string name="kyc_email_send_verification">Send Email</string>
    <string name="kyc_email_validation_header">Check your inbox.</string>
    <string name="kyc_email_validation_message">We just sent you an email with further instructions.</string>
    <string name="kyc_email_validation_hint">Confirmation Code</string>
    <string name="kyc_email_validation_error">Error validating phone number. Please check your code</string>
    <string name="kyc_email_validation_error_incorrect">Verification code incorrect. Please double check the code we sent you and try again.</string>
    <string name="kyc_email_didnt_see_email">Didn\'t see email? %1$s</string>
    <string name="kyc_email_send_again_hyperlink">Send again</string>
    <string name="kyc_email_email_was_resent">Email was resent</string>
    <string name="kyc_phone_number_title">Verify Your Device</string>
    <string name="kyc_phone_number_message">This will help us to verify your identity today, and also keep your account secure in the future. To do this an SMS will be sent to your phone with a verification code.</string>
    <string name="kyc_phone_number_hint_focused">Your Mobile Number</string>
    <string name="kyc_phone_number_hint_unfocused">+1 2345 678 910</string>
    <string name="kyc_phone_didnt_see_sms">%1$s</string>
    <string name="kyc_phone_send_again_hyperlink">Resend Code</string>
    <string name="kyc_phone_number_error_saving_number">Error saving mobile number, please try again</string>
    <string name="kyc_phone_number_error_conflict">Mobile phone number already registered, please use another.</string>
    <string name="kyc_phone_number_code_was_resent">Code was resent</string>
    <string name="kyc_phone_number_validation_header">Enter the code sent to</string>
    <string name="kyc_phone_number_validation_hint">Confirmation Code</string>
    <string name="kyc_phone_number_validation_error">Error validating phone number. Please check your code</string>
    <string name="kyc_phone_number_validation_error_incorrect">Verification code incorrect. Please double check the code we sent you and try again.</string>
    <string name="kyc_phone_number_error_resending">Error sending Code, please try again</string>
    <string name="kyc_onfido_splash_title">Verify Your Identity</string>
    <string name="kyc_onfido_splash_header">Let\'s Confirm It\'s You</string>
    <string name="kyc_onfido_splash_subtitle">Grab your Passport or Driver\'s License.</string>
    <string name="kyc_onfido_splash_message">Once we verify your identity, you are approved to exchange cryptocurrencies on the Blockchain app!</string>
    <string name="kyc_onfido_splash_verification_error">Error verifying ID, please try again</string>
    <string name="kyc_onfido_splash_passport">My Passport</string>
    <string name="kyc_onfido_splash_drivers_license">My Drivers License</string>
    <string name="kyc_onfido_splash_id_card">My Government Issued ID</string>
    <string name="kyc_onfido_splash_residence_permit">My Residence Permit</string>
    <string name="kyc_veriff_splash_title">@string/kyc_documents_needed</string>
    <string name="kyc_veriff_splash_header">@string/kyc_onfido_splash_header</string>
    <string name="kyc_veriff_splash_subtitle">You’ll need 1 of the ID types below to continue.</string>
    <string name="kyc_veriff_splash_enable_camera_title">Also, enable your camera!</string>
    <string name="kyc_veriff_splash_enable_camera_body">Please allow your Blockchain App access your camera to upload your ID and take a Selfie.</string>
    <string name="kyc_veriff_splash_verification_error">@string/kyc_onfido_splash_verification_error</string>
    <string name="kyc_veriff_splash_passport">Valid Passport</string>
    <string name="kyc_veriff_splash_drivers_license">Drivers License</string>
    <string name="kyc_veriff_splash_id_card">National ID Card</string>
    <string name="kyc_veriff_splash_residence_permit">Residence Card</string>
    <string name="kyc_veriff_splash_continue">Continue</string>
    <string name="kyc_complete_title">Application Complete</string>
    <string name="kyc_complete_header">Done and Done!</string>
    <string name="kyc_complete_subtitle">You successfully submitted your information. Your account is now in review!</string>
    <string name="kyc_complete_button_done">Done</string>
    <string name="kyc_complete_country_selected">Country Selected</string>
    <string name="kyc_complete_profile_created">Profile Created</string>
    <string name="kyc_complete_home_address">Home Address Added</string>
    <string name="kyc_complete_device_verified">Device Verified</string>
    <string name="kyc_complete_id_uploaded">ID Uploaded</string>
    <string name="kyc_complete_video_uploaded">Video uploaded</string>
    <string name="kyc_help_dialog_need_some_help">@string/need_some_help</string>
    <string name="kyc_help_dialog_need_some_help_body">Our Blockchain Support Team has written Help Guides explaining why we need to verify your identity.</string>
    <string name="kyc_help_dialog_read_now">Read Now</string>
    <string name="kyc_help_dialog_read_now_url">https://blockchain.zendesk.com/hc/en-us/categories/360001135512-Identity-Verification</string>
    <string name="kyc_help_dialog_contact_support">@string/contact_support</string>
    <string name="kyc_help_dialog_contact_support_url">https://blockchain.zendesk.com/hc/en-us/requests/new?ticket_form_id=360000186571</string>
    <string name="kyc_settings_identity_verification">Identity Verification</string>
    <string name="kyc_settings_status_none">Unverified</string>
    <string name="kyc_settings_status_pending">In Progress</string>
    <string name="kyc_settings_status_under_review">Under Review</string>
    <string name="kyc_settings_status_rejected">Failed</string>
    <string name="kyc_settings_status_verified">Verified</string>
    <string name="kyc_settings_swap_limit">Swap Limit</string>
    <string name="kyc_settings_tier_status_locked">Locked</string>
    <string name="kyc_settings_silver_level_in_review">Silver Level - In review</string>
    <string name="kyc_settings_gold_level_in_review">Gold Level - In review</string>
    <string name="kyc_settings_gold_level_approved">Gold Level - Approved</string>
    <string name="kyc_settings_silver_level_approved">Silver Level - Approved</string>
    <string name="kyc_settings_tier_status_failed">@string/kyc_settings_status_rejected</string>
    <string name="kyc_status_error">Error fetching KYC status</string>
    <string name="kyc_status_title_in_progress">Verification In Progress</string>
    <string name="kyc_status_title_approved">Account Approved</string>
    <string name="kyc_status_title_failed">Verification Failed</string>
    <string name="kyc_status_title_in_review">Verification Under Review</string>
    <string name="kyc_status_subtitle">What happens next?</string>
    <string name="kyc_status_message_in_progress">Your information is being reviewed. When it all looks good, you\'re clear to exchange. You should receive a notification within 5 minutes.</string>
    <string name="kyc_status_message_verified">Congratulations! We successfully verified your identity. You can now exchange cryptocurrencies at Blockchain.</string>
</resources>