<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_veriff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/text_view_document_passport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/kyc_veriff_splash_passport"
        android:textSize="16sp"
        android:theme="@style/PlainTheme"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_document_drivers_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/kyc_veriff_splash_drivers_license"
        android:textSize="16sp"
        android:theme="@style/PlainTheme"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_document_id_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/kyc_veriff_splash_id_card"
        android:textSize="16sp"
        android:theme="@style/PlainTheme"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_view_document_residence_permit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="@string/kyc_veriff_splash_residence_permit"
        android:textSize="16sp"
        android:theme="@style/PlainTheme"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>