<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_email_validation_title"
            style="@style/KycFlowTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kyc_email_validation_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_email_validation_message"
            style="@style/KycFlowMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kyc_email_validation_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_email_validation_title" />

        <TextView
            android:id="@+id/text_view_email"
            style="@style/KycFlowMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kyc_email_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_email_validation_message"
            tools:text="abc@blockchain.com" />

        <TextView
            android:id="@+id/text_view_resend_prompt"
            style="@style/KycFlowMessage"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button_kyc_email_validation_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_email"
            app:layout_constraintVertical_bias="1.0"
            tools:text="@string/kyc_email_didnt_see_email" />

        <Button
            android:id="@+id/button_kyc_email_validation_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="48dp"
            android:enabled="false"
            android:text="@string/kyc_profile_next"
            android:theme="@style/LightBlueButtonTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_email"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>