<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_profile_title"
            style="@style/KycFlowTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kyc_profile_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_profile_message"
            style="@style/KycFlowMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kyc_profile_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_profile_title" />

        <!-- First name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_kyc_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/kyc_profile_first_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_profile_message">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_kyc_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLength="64"
                android:inputType="textPersonName|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <!-- Surname -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_kyc_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/kyc_profile_last_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_kyc_first_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_kyc_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:maxLength="64"
                android:inputType="textPersonName|textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <!-- Date of Birth -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_kyc_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/kyc_profile_dob_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_kyc_last_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_kyc_profile_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/kyc_profile_next"
            android:theme="@style/LightBlueButtonTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_kyc_date_of_birth"
            app:layout_constraintVertical_bias="1.0" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>