<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_country_selection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kyc_country_selection_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/KycFlowTitle" />

    <TextView
        android:id="@+id/text_view_country_selection_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kyc_country_selection_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_country_selection_title"
        style="@style/KycFlowMessage" />

    <android.support.v7.widget.SearchView
        android:id="@+id/search_view_kyc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_country_selection_message"
        app:queryHint="@string/kyc_country_selection_search_hint" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_country_selection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_view_kyc" />

</android.support.constraint.ConstraintLayout>